--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.css">
     <title>Hot Resturant</title>
 </head>
 
 <body>
 
     <div class="container">
-
+            <div class="jumbotron">
+                    <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
+                    <hr class="my-4">
+                    <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
+                    <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
+                    <a class="btn btn-primary btn-lg" href="#" role="button"></a>
+                  </div>
     </div>
 
 </body>
