--- a/index.html
+++ b/index.html
@@ -24,14 +24,52 @@
 <body>
 
     <div class="container">
-            <div class="jumbotron">
-                    <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
-                    <hr class="my-4">
-                    <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
-                    <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
-                    <a class="btn btn-primary btn-lg" href="#" role="button"></a>
-                  </div>
+        <div class="row">
+            <div class="jumbotron text-center col-12">
+                <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
+                <hr class="my-4">
+                <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
+                <a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
+                <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button"></a>
+            </div>
+        </div>
+        <br>
+        <div id="resList" class="row">
+            <ul class="list-group col-12 px-0">
+                <li class="list-group-item list-group-item-dark">Current Reservation</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+            </ul>
+            <ul class="list-group col-12 px-0">
+                <li class="list-group-item list-group-item-dark">Waiting List</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+            </ul>
+        </div>
+        <br>
+        <div id="makeRes" class="row">
+            <form>
+                <div class="form-group">
+                    <label for="inputEmal">Email</label>
+                    <input type="email" class="form-control" id="inputEmal" aria-describedby="emailHelp"
+                        placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                    <label for="inputName">Name</label>
+                    <input type="name" class="form-control" id="inputName" placeholder="Enter Name">
+                </div>
+                <div class="form-group">
+                    <label for="inputPhone">Phone Number</label>
+                    <input type="phone" class="form-control" id="inputPhone" aria-describedby="phoneHelp"
+                        placeholder="Enter Phone">
+                </div>
+                <div class="form-group">
+                    <label for="inputID">Unique ID</label>
+                    <input type="id" class="form-control" id="inputID" aria-describedby="idHelp" placeholder="Enter ID">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
     </div>
 
 </body>
