split html into 3 files

--- a/reservation.html
+++ b/reservation.html
@@ -30,19 +30,8 @@
                 <hr class="my-4">
                 <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
                 <a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
-                <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button"></a>
             </div>
-        </div>
-        <br>
-        <div id="resList" class="row">
-            <ul class="list-group col-12 px-0">
-                <li class="list-group-item list-group-item-dark">Current Reservation</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-            </ul>
-            <ul class="list-group col-12 px-0">
-                <li class="list-group-item list-group-item-dark">Waiting List</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-            </ul>
         </div>
         <br>
         <div id="makeRes" class="row">
