--- a/waitlist.html
+++ b/waitlist.html
@@ -30,7 +30,7 @@
                 <hr class="my-4">
                 <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
                 <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
-                <a class="btn btn-primary btn-lg" href="#" role="button"></a>
+                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="#" role="button"></a>
             </div>
         </div>
         <br>
