--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    </script>
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>Hot Resturant</title>
 </head>
 
@@ -29,47 +30,16 @@
                 <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
                 <hr class="my-4">
                 <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
-                <a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
-                <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
+                <a class="btn btn-primary btn-lg" href="./waitlist.html" role="button"><i class="fas fa-utensils"></i> View Tables</a>
+                <a class="btn btn-danger btn-lg" href="./reservation.html" role="button"><i class="fas fa-list"></i> Make Reservation</a>
             </div>
         </div>
-        <br>
-        <div id="resList" class="row">
-            <ul class="list-group col-12 px-0">
-                <li class="list-group-item list-group-item-dark">Current Reservation</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-            </ul>
-            <ul class="list-group col-12 px-0">
-                <li class="list-group-item list-group-item-dark">Waiting List</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-            </ul>
-        </div>
-        <br>
-        <div id="makeRes" class="row">
-            <form>
-                <div class="form-group">
-                    <label for="inputEmal">Email</label>
-                    <input type="email" class="form-control" id="inputEmal" aria-describedby="emailHelp"
-                        placeholder="Enter email">
-                </div>
-                <div class="form-group">
-                    <label for="inputName">Name</label>
-                    <input type="name" class="form-control" id="inputName" placeholder="Enter Name">
-                </div>
-                <div class="form-group">
-                    <label for="inputPhone">Phone Number</label>
-                    <input type="phone" class="form-control" id="inputPhone" aria-describedby="phoneHelp"
-                        placeholder="Enter Phone">
-                </div>
-                <div class="form-group">
-                    <label for="inputID">Unique ID</label>
-                    <input type="id" class="form-control" id="inputID" aria-describedby="idHelp" placeholder="Enter ID">
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
+        
+
 
     </div>
+
+    <script src="https://kit.fontawesome.com/89b68748b2.js"></script>
 
 </body>
 
