--- a/reservation.html
+++ b/reservation.html
@@ -29,13 +29,13 @@
                 <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
                 <hr class="my-4">
                 <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
-                <a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
-                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="#" role="button"></a>
+                <a class="btn btn-primary btn-lg" href="waitlist.html" role="button"><i class="fas fa-utensils"></i>View Tables</a>
+                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="/index.html" role="button"></a>
             </div>
         </div>
         <br>
         <div id="makeRes" class="row">
-            <form>
+            <form class="col-12">
                 <div class="form-group">
                     <label for="inputEmal">Email</label>
                     <input type="email" class="form-control" id="inputEmal" aria-describedby="emailHelp"
@@ -54,11 +54,13 @@
                     <label for="inputID">Unique ID</label>
                     <input type="id" class="form-control" id="inputID" aria-describedby="idHelp" placeholder="Enter ID">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button id="add-btn" type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
 
     </div>
+
+    <script src="https://kit.fontawesome.com/89b68748b2.js"></script>
 
 </body>
 
