--- a/waitlist.html
+++ b/waitlist.html
@@ -29,8 +29,8 @@
                 <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
                 <hr class="my-4">
                 <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
-                <a class="btn btn-danger btn-lg" href="#" role="button">Make Reservation</a>
-                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="#" role="button"></a>
+                <a class="btn btn-danger btn-lg" href="./reservation.html" role="button"><i class="fas fa-list"></i> Make Reservation</a>
+                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="./index.html" role="button"></a>
             </div>
         </div>
         <br>
@@ -39,6 +39,7 @@
                 <li class="list-group-item list-group-item-dark">Current Reservation</li>
                 <li class="list-group-item">Dapibus ac facilisis in</li>
             </ul>
+            <br>
             <ul class="list-group col-12 px-0">
                 <li class="list-group-item list-group-item-dark">Waiting List</li>
                 <li class="list-group-item">Dapibus ac facilisis in</li>
@@ -47,6 +48,8 @@
         
 
     </div>
+
+    <script src="https://kit.fontawesome.com/89b68748b2.js"></script>
 
 </body>
 
