--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
                 <hr class="my-4">
                 <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
-                <a class="btn btn-primary btn-lg" href="./waitlist.html" role="button"><i class="fas fa-utensils"></i> View Tables</a>
-                <a class="btn btn-danger btn-lg" href="./reservation.html" role="button"><i class="fas fa-list"></i> Make Reservation</a>
+                <a class="btn btn-primary btn-lg" href="./waitlist" role="button"><i class="fas fa-utensils"></i> View Tables</a>
+                <a class="btn btn-danger btn-lg" href="./reservation" role="button"><i class="fas fa-list"></i> Make Reservation</a>
             </div>
         </div>
         
