added data.js to res.html

--- a/reservation.html
+++ b/reservation.html
@@ -60,6 +60,8 @@
 
     </div>
 
+    <script src="./data.js"></script>
+
     <script src="https://kit.fontawesome.com/89b68748b2.js"></script>
 
 </body>
