--- a/reservation.html
+++ b/reservation.html
@@ -29,8 +29,8 @@
                 <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
                 <hr class="my-4">
                 <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
-                <a class="btn btn-primary btn-lg" href="waitlist.html" role="button"><i class="fas fa-utensils"></i>View Tables</a>
-                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="/index.html" role="button"></a>
+                <a class="btn btn-primary btn-lg" href="/waitlist" role="button"><i class="fas fa-utensils"></i>View Tables</a>
+                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="/index" role="button"></a>
             </div>
         </div>
         <br>
