--- a/waitlist.html
+++ b/waitlist.html
@@ -28,21 +28,19 @@
                 <h1 class="display-4"><i class="fas fa-fire"></i> Hot Resturant</h1>
                 <hr class="my-4">
                 <h2>We only have 5 tables! Book your seat before they all are gone!</h2>
-                <a class="btn btn-danger btn-lg" href="./reservation.html" role="button"><i class="fas fa-list"></i>
+                <a class="btn btn-danger btn-lg" href="./reservation" role="button"><i class="fas fa-list"></i>
                     Make Reservation</a>
-                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="./index.html" role="button"></a>
+                <a class="btn btn-primary btn-lg fa fa-home fa-2x" href="./index" role="button"></a>
             </div>
         </div>
         <br>
         <div id="resList" class="row">
-            <ul class="list-group col-12 px-0">
+            <ul id="reserve" class="list-group col-12 px-0">
                 <li class="list-group-item list-group-item-dark">Current Reservation</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
             </ul>
             <br>
-            <ul class="list-group col-12 px-0">
+            <ul id="wait" class="list-group col-12 px-0">
                 <li class="list-group-item list-group-item-dark">Waiting List</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
             </ul>
         </div>
 
@@ -53,7 +51,13 @@
         $(document).ready(function () {
             console.log("LOADED");
             $.get("/api/tables", (data, status) => {
-                console.log(JSON.parse(data.reservation) + "," + status)
+                data.reservation.forEach(function (c) {
+                    var item = $("<li>");
+                    item.addClass("list-group-item");
+                    item.html(`<strong>Name:</strong> ${c.name}\r<strong>Email:</strong> ${c.email}`);
+                    $("#reserve").append(item);
+                });
+                // console.log( + "," + status)
             });
         });
     </script>
