--- a/reservation.html
+++ b/reservation.html
@@ -64,7 +64,8 @@
         //To be added to HTML, sends obj via POST to server.
         var quotes = ["Hangry: an emotion when you are seething with anger, thanks to hunger pangs.", "Hangry Symptoms: Wishing to kill anyone who hasn't brought you food, and wants to chat you up instead.", " Caution: Keep away from those temporarily affected by the hangry epidemic."];
         function getQuote() {
-            var random = Math.round(Math.random * (quotes.length - 1));
+            var random = Math.round(Math.random() * (quotes.length - 1));
+            console.log(random,quotes.length);
             alert("Your table has been reserved, thank you\r" +
                 quotes[random]);
         }
